Final commit - Finished

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!-- These codes are written by Dev Adarsh and if you copy paste the codes without credits... 
+  The legeal action can be taken by owner and take down your hosted website. under the section of DMCA(1996)
+-->
+
+<!-- 
+DON'T TOUCH THese LINEs. DO NOT REMOVE.
+
+C R E D I T S:
+OWNER: DEV ADARSH PANDIT
+GITHUB: https://github.com/yourUsername/Tailwind-portfolio.git
+FREE TO USE WITH CREDITS!
+
+© All rights are reserved.
+ -->
+
+
+<!-- Codes starts from here! -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -382,7 +399,7 @@
 
 <!-- Foooter -->
 <section class="bg-slate-200">
-  <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden lg:px-6 lg:px-8">
+  <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden lg:px-8">
       <nav class="flex flex-wrap justify-center -mx-5 -my-2">
           <div class="px-5 py-2">
               <a href="#" class="text-base leading-6 text-gray-500 hover:text-gray-900">
@@ -461,3 +478,21 @@
 </body>
 
 </html>
+
+
+<!-- I Know Stupids Motherfucker Kangers will remove the credits from above so This is here also! -->
+
+<!-- These codes are written by Dev Adarsh and if you copy paste the codes without credits... 
+  The legeal action can be taken by owner and take down your hosted website. under the section of DMCA(1996)
+-->
+
+<!-- 
+DON'T TOUCH THese LINEs. DO NOT REMOVE.
+
+C R E D I T S:
+OWNER: DEV ADARSH PANDIT
+GITHUB: https://github.com/yourUsername/Tailwind-portfolio.git
+FREE TO USE WITH CREDITS!
+
+© All rights are reserved.
+ -->
